fixed navigation bar vertical alignement
- fixed navigation bar vertical alignement

--- a/content_tasks/content.css
+++ b/content_tasks/content.css
@@ -2,8 +2,17 @@
     display: none;
 }
 
-.align {
-    vertical-align: middle;
+.table {
+	display: table;
+}
+
+.row {
+	display: table-row;
+}
+
+.cell {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .navigation_bar_spacer {
@@ -65,7 +74,7 @@
 }
 
 .text_icons {
-	width: 1em;
-    height: 1em;
-    padding: 0em 0.25em;
+	width: 1.25em;
+	height: 1.25em;
+	padding: 0em 0.25em;
 }
